--- a/cx.html
+++ b/cx.html
@@ -1462,19 +1462,19 @@ function main() {
             (&quot;truetomato&quot;, &quot;\x1B[38;2;255;100;0m&quot;)]"><wbr />color<wbr />Names<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rxCol"
     title="rxCol =
-  var result391428: seq[type(low(colorNames) .. high(colorNames))] = []
-  block :tmp391452:
+  var result401428: seq[type(low(colorNames) .. high(colorNames))] = []
+  block :tmp401452:
       var
-        x391439
+        x401439
         :tmp
       :tmp = high(colorNames)
       var res = 0
-      block :tmp391454:
+      block :tmp401454:
           while res &lt;= int(:tmp):
-            x391439 = T(res)
-            add(result391428, x391439)
+            x401439 = T(res)
+            add(result401428, x401439)
             inc(res, 1)
-  result391428"><wbr />rx<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
+  result401428"><wbr />rx<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cards"
     title="cards = [&quot;\xF0\x9F\x82\xA1&quot;, &quot;\xF0\x9F\x82\xB1&quot;, &quot;\xF0\x9F\x83\x81&quot;,
        &quot;\xF0\x9F\x83\x91&quot;, &quot;\xF0\x9F\x82\xA2&quot;, &quot;\xF0\x9F\x82\xB2&quot;,
@@ -1498,19 +1498,19 @@ function main() {
        &quot;\xF0\x9F\x82\xBF&quot;, &quot;\xF0\x9F\x83\x8F&quot;, &quot;\xF0\x9F\x83\x9F&quot;]"><wbr />cards<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rxCards"
     title="rxCards =
-  var result391828: seq[type(low(cards) .. high(cards))] = []
-  block :tmp391852:
+  var result401828: seq[type(low(cards) .. high(cards))] = []
+  block :tmp401852:
       var
-        x391839
+        x401839
         :tmp
       :tmp = high(cards)
       var res = 0
-      block :tmp391854:
+      block :tmp401854:
           while res &lt;= int(:tmp):
-            x391839 = T(res)
-            add(result391828, x391839)
+            x401839 = T(res)
+            add(result401828, x401839)
             inc(res, 1)
-  result391828"><wbr />rx<wbr />Cards<span class="attachedType" style="visibility:hidden"></span></a></li>
+  result401828"><wbr />rx<wbr />Cards<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -3124,19 +3124,19 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 <dt id="rxCol"><a name="rxCol"></a><pre><span class="Identifier">rxCol</span> <span class="Other">=</span>
-  <span class="Keyword">var</span> <span class="Identifier">result</span><span class="DecNumber">391428</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">type</span><span class="Other">(</span><span class="Identifier">low</span><span class="Other">(</span><span class="Identifier">colorNames</span><span class="Other">)</span> <span class="Operator">..</span> <span class="Identifier">high</span><span class="Other">(</span><span class="Identifier">colorNames</span><span class="Other">)</span><span class="Other">)</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">[</span><span class="Other">]</span>
-  <span class="Keyword">block</span> <span class="Operator">:tmp391452</span><span class="Other">:</span>
+  <span class="Keyword">var</span> <span class="Identifier">result</span><span class="DecNumber">401428</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">type</span><span class="Other">(</span><span class="Identifier">low</span><span class="Other">(</span><span class="Identifier">colorNames</span><span class="Other">)</span> <span class="Operator">..</span> <span class="Identifier">high</span><span class="Other">(</span><span class="Identifier">colorNames</span><span class="Other">)</span><span class="Other">)</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">[</span><span class="Other">]</span>
+  <span class="Keyword">block</span> <span class="Operator">:tmp401452</span><span class="Other">:</span>
       <span class="Keyword">var</span>
-        <span class="Identifier">x</span><span class="DecNumber">391439</span>
+        <span class="Identifier">x</span><span class="DecNumber">401439</span>
         <span class="Operator">:tmp</span>
       <span class="Operator">:tmp</span> <span class="Other">=</span> <span class="Identifier">high</span><span class="Other">(</span><span class="Identifier">colorNames</span><span class="Other">)</span>
       <span class="Keyword">var</span> <span class="Identifier">res</span> <span class="Other">=</span> <span class="DecNumber">0</span>
-      <span class="Keyword">block</span> <span class="Operator">:tmp391454</span><span class="Other">:</span>
+      <span class="Keyword">block</span> <span class="Operator">:tmp401454</span><span class="Other">:</span>
           <span class="Keyword">while</span> <span class="Identifier">res</span> <span class="Operator">&lt;=</span> <span class="Identifier">int</span><span class="Other">(</span><span class="Operator">:tmp</span><span class="Other">)</span><span class="Other">:</span>
-            <span class="Identifier">x</span><span class="DecNumber">391439</span> <span class="Other">=</span> <span class="Identifier">T</span><span class="Other">(</span><span class="Identifier">res</span><span class="Other">)</span>
-            <span class="Identifier">add</span><span class="Other">(</span><span class="Identifier">result</span><span class="DecNumber">391428</span><span class="Other">,</span> <span class="Identifier">x</span><span class="DecNumber">391439</span><span class="Other">)</span>
+            <span class="Identifier">x</span><span class="DecNumber">401439</span> <span class="Other">=</span> <span class="Identifier">T</span><span class="Other">(</span><span class="Identifier">res</span><span class="Other">)</span>
+            <span class="Identifier">add</span><span class="Other">(</span><span class="Identifier">result</span><span class="DecNumber">401428</span><span class="Other">,</span> <span class="Identifier">x</span><span class="DecNumber">401439</span><span class="Other">)</span>
             <span class="Identifier">inc</span><span class="Other">(</span><span class="Identifier">res</span><span class="Other">,</span> <span class="DecNumber">1</span><span class="Other">)</span>
-  <span class="Identifier">result</span><span class="DecNumber">391428</span></pre></dt>
+  <span class="Identifier">result</span><span class="DecNumber">401428</span></pre></dt>
 <dd>
 index into colorNames
 &nbsp;&nbsp;<a
@@ -3174,19 +3174,19 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 <dt id="rxCards"><a name="rxCards"></a><pre><span class="Identifier">rxCards</span> <span class="Other">=</span>
-  <span class="Keyword">var</span> <span class="Identifier">result</span><span class="DecNumber">391828</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">type</span><span class="Other">(</span><span class="Identifier">low</span><span class="Other">(</span><span class="Identifier">cards</span><span class="Other">)</span> <span class="Operator">..</span> <span class="Identifier">high</span><span class="Other">(</span><span class="Identifier">cards</span><span class="Other">)</span><span class="Other">)</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">[</span><span class="Other">]</span>
-  <span class="Keyword">block</span> <span class="Operator">:tmp391852</span><span class="Other">:</span>
+  <span class="Keyword">var</span> <span class="Identifier">result</span><span class="DecNumber">401828</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">type</span><span class="Other">(</span><span class="Identifier">low</span><span class="Other">(</span><span class="Identifier">cards</span><span class="Other">)</span> <span class="Operator">..</span> <span class="Identifier">high</span><span class="Other">(</span><span class="Identifier">cards</span><span class="Other">)</span><span class="Other">)</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">[</span><span class="Other">]</span>
+  <span class="Keyword">block</span> <span class="Operator">:tmp401852</span><span class="Other">:</span>
       <span class="Keyword">var</span>
-        <span class="Identifier">x</span><span class="DecNumber">391839</span>
+        <span class="Identifier">x</span><span class="DecNumber">401839</span>
         <span class="Operator">:tmp</span>
       <span class="Operator">:tmp</span> <span class="Other">=</span> <span class="Identifier">high</span><span class="Other">(</span><span class="Identifier">cards</span><span class="Other">)</span>
       <span class="Keyword">var</span> <span class="Identifier">res</span> <span class="Other">=</span> <span class="DecNumber">0</span>
-      <span class="Keyword">block</span> <span class="Operator">:tmp391854</span><span class="Other">:</span>
+      <span class="Keyword">block</span> <span class="Operator">:tmp401854</span><span class="Other">:</span>
           <span class="Keyword">while</span> <span class="Identifier">res</span> <span class="Operator">&lt;=</span> <span class="Identifier">int</span><span class="Other">(</span><span class="Operator">:tmp</span><span class="Other">)</span><span class="Other">:</span>
-            <span class="Identifier">x</span><span class="DecNumber">391839</span> <span class="Other">=</span> <span class="Identifier">T</span><span class="Other">(</span><span class="Identifier">res</span><span class="Other">)</span>
-            <span class="Identifier">add</span><span class="Other">(</span><span class="Identifier">result</span><span class="DecNumber">391828</span><span class="Other">,</span> <span class="Identifier">x</span><span class="DecNumber">391839</span><span class="Other">)</span>
+            <span class="Identifier">x</span><span class="DecNumber">401839</span> <span class="Other">=</span> <span class="Identifier">T</span><span class="Other">(</span><span class="Identifier">res</span><span class="Other">)</span>
+            <span class="Identifier">add</span><span class="Other">(</span><span class="Identifier">result</span><span class="DecNumber">401828</span><span class="Other">,</span> <span class="Identifier">x</span><span class="DecNumber">401839</span><span class="Other">)</span>
             <span class="Identifier">inc</span><span class="Other">(</span><span class="Identifier">res</span><span class="Other">,</span> <span class="DecNumber">1</span><span class="Other">)</span>
-  <span class="Identifier">result</span><span class="DecNumber">391828</span></pre></dt>
+  <span class="Identifier">result</span><span class="DecNumber">401828</span></pre></dt>
 <dd>
 
 &nbsp;&nbsp;<a
@@ -6658,9 +6658,9 @@ class="link-seesrc" target="_blank">Source</a>
 <a href="/edit/devel/cx.nim#L3485" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<dt id="getWanIp"><a name="getWanIp,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getWanIp</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">HttpRequestError</span><span class="Other">,</span> <span class="Identifier">SslError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">,</span>
-                               <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">TimeoutError</span><span class="Other">,</span> <span class="Identifier">ProtocolError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span>
-                               <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span>
+<dt id="getWanIp"><a name="getWanIp,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getWanIp</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">HttpRequestError</span><span class="Other">,</span> <span class="Identifier">SslError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span>
+                               <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">TimeoutError</span><span class="Other">,</span> <span class="Identifier">ProtocolError</span><span class="Other">,</span>
+                               <span class="Identifier">KeyError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span>
     <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>getWanIp</p>
@@ -6687,9 +6687,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 <dt id="showWanIp"><a name="showWanIp,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showWanIp</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span>
-                         <span class="Identifier">HttpRequestError</span><span class="Other">,</span> <span class="Identifier">SslError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
-                         <span class="Identifier">TimeoutError</span><span class="Other">,</span> <span class="Identifier">ProtocolError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">,</span>
-    <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+                         <span class="Identifier">HttpRequestError</span><span class="Other">,</span> <span class="Identifier">SslError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">TimeoutError</span><span class="Other">,</span>
+                         <span class="Identifier">ProtocolError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span>
+    <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>showWanIp</p>
 <p>show your current wan ip </p>
@@ -8213,7 +8213,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-02-26 16:12:48 UTC</small>
+        <small>Made with Nim. Generated: 2017-02-28 21:31:32 UTC</small>
       </div>
     </div>
   </div>
