--- a/cx.html
+++ b/cx.html
@@ -2506,9 +2506,9 @@ Description :
 
 Usage       : import cx
 
-Project     : 'NimCx &lt;https://github.com/qqtop/NimCx&gt;`_
+Project     : `NimCx &lt;https://github.com/qqtop/NimCx&gt;`_
 
-Docs        : 'NimCx-Documentation &lt;http://qqtop.github.io/cx.html&gt;'_
+Docs        : `NimCx-Documentation &lt;http://qqtop.github.io/cx.html&gt;`_
 
 Tested      : OpenSuse 13.2 , OpenSuse Tumbleweed , Ubuntu 16.04 LTS
               
@@ -8213,7 +8213,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-03-01 20:53:15 UTC</small>
+        <small>Made with Nim. Generated: 2017-03-01 20:55:15 UTC</small>
       </div>
     </div>
   </div>
