--- a/cx.html
+++ b/cx.html
@@ -2508,7 +2508,7 @@ Usage       : import cx
 
 Project     : https://github.com/qqtop/NimCx
 
-Docs        : http://qqtop.github.io/cx.html
+Docs        : https://qqtop.github.io/cx.html
 
 Tested      : OpenSuse 13.2 , OpenSuse Tumbleweed , Ubuntu 16.04 LTS
               
@@ -8213,7 +8213,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-03-01 20:57:16 UTC</small>
+        <small>Made with Nim. Generated: 2017-03-01 21:01:38 UTC</small>
       </div>
     </div>
   </div>
