--- a/cx.html
+++ b/cx.html
@@ -2293,8 +2293,8 @@ function main() {
     title="dayOfYear(tt: Time): range[0 .. 365]"><wbr />day<wbr />Of<wbr />Year<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#toTimeInfo,string"
     title="toTimeInfo(date: string = &quot;2000-01-01&quot;): TimeInfo"><wbr />to<wbr />Time<wbr />Info<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#epochSecs2,string"
-    title="epochSecs2(date: string = &quot;2000-01-01&quot;): int"><wbr />epoch<wbr />Secs2<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#epochSecs,string"
+    title="epochSecs(date: string = &quot;2000-01-01&quot;): int"><wbr />epoch<wbr />Secs<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#checkClip,string"
     title="checkClip(sel: string = &quot;primary&quot;): string"><wbr />check<wbr />Clip<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#toClip,T"
@@ -7175,7 +7175,7 @@ class="link-seesrc" target="_blank">Source</a>
 <a href="/edit/devel/cx.nim#L4312" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<dt id="epochSecs2"><a name="epochSecs2,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">epochSecs2</span><span class="Other">(</span><span class="Identifier">date</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;2000-01-01&quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+<dt id="epochSecs"><a name="epochSecs,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">epochSecs</span><span class="Other">(</span><span class="Identifier">date</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;2000-01-01&quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
@@ -7893,7 +7893,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-06-05 08:07:28 UTC</small>
+        <small>Made with Nim. Generated: 2017-06-05 08:10:23 UTC</small>
       </div>
     </div>
   </div>
