--- a/cx.html
+++ b/cx.html
@@ -2430,6 +2430,10 @@ function main() {
     title="zipWith[T1, T2](f: untyped; xs: openArray[T1]; ys: openArray[T2]): untyped"><wbr />zip<wbr />With<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#currentFile.t,"
     title="currentFile(): string"><wbr />current<wbr />File<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#infoProc.t,untyped"
+    title="infoProc(code: untyped)"><wbr />info<wbr />Proc<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#checkLocals.t,"
+    title="checkLocals()"><wbr />check<wbr />Locals<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -7448,9 +7452,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>prints qqTop in custom color </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L4863"
+href="/tree/master/cx.nim#L4898"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L4863" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L4898" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="doInfo"><a name="doInfo,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doInfo</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span>
@@ -7460,9 +7464,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>A more than you want to know information proc</p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L4874"
+href="/tree/master/cx.nim#L4909"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L4874" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L4909" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="infoLine"><a name="infoLine,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">infoLine</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
@@ -7473,9 +7477,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>prints some info for current application </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L4942"
+href="/tree/master/cx.nim#L4977"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L4942" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L4977" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="doByeBye"><a name="doByeBye,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doByeBye</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
@@ -7485,9 +7489,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>a simple end program routine do give some feedback when exiting </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L4960"
+href="/tree/master/cx.nim#L4995"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L4960" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L4995" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="doFinish"><a name="doFinish,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doFinish</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
@@ -7500,9 +7504,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>and should be the last line of the application </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L4972"
+href="/tree/master/cx.nim#L5007"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L4972" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L5007" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="handler"><a name="handler,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">handler</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">noconv</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
@@ -7518,9 +7522,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>or under some circumstances like being called during readLineFromStdin</p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L4991"
+href="/tree/master/cx.nim#L5026"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L4991" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L5026" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -7934,6 +7938,32 @@ class="link-seesrc" target="_blank">Source</a>
 <a href="/edit/devel/cx.nim#L4306" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
+<dt id="infoProc"><a name="infoProc.t,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">infoProc</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>infoProc</p>
+<p>shows from where a specific function has been called .. code-block:: nim</p>
+<blockquote><p><dl class="docutils"><dt>proc test[T](ff:T) =</dt>
+<dd>let yuuu = @[&quot;test&quot;] var x = &quot;sdfsdf&quot; var z = 689999999999999999i64 checklocals()</dd>
+</dl>
+</p></blockquote>
+
+&nbsp;&nbsp;<a
+href="/tree/master/cx.nim#L4862"
+class="link-seesrc" target="_blank">Source</a>
+<a href="/edit/devel/cx.nim#L4862" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+<dt id="checkLocals"><a name="checkLocals.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">checkLocals</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>checkLocals</p>
+<p>check name,type and value of local variables needs to be called inside a proc calling from toplevel has no effect best placed at bottom end of a proc to pick up all Variables </p>
+
+&nbsp;&nbsp;<a
+href="/tree/master/cx.nim#L4882"
+class="link-seesrc" target="_blank">Source</a>
+<a href="/edit/devel/cx.nim#L4882" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
 
 </dl></div>
 
@@ -7944,7 +7974,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-06-18 10:59:04 UTC</small>
+        <small>Made with Nim. Generated: 2017-06-18 15:10:24 UTC</small>
       </div>
     </div>
   </div>
